# haru-backend

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6cc7310e0174_initial_empty_migration.py  6e777b71b4fa_create_users_diaries_diary_results_.py
app/: main.py
app/agents/: __init__.py  art_agent.py  emotion_agent.py  executor.py  memory_agent.py  mock_agents.py  poet_agent.py
app/api/v1/: diaries.py  health.py  router.py
app/core/: auth.py  config.py  database.py  r2.py  storage.py
app/models/: __init__.py  diary.py  diary_result.py  memory.py  user.py
app/schemas/: ai.py  diary.py  user.py
app/services/: diary_service.py  generation_service.py  sound.py
app/utils/: sse.py
docs/: index.html
